[gd_scene load_steps=2 format=3 uid="uid://cfeaxmapleyiu"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_pyqd8"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_pyqd8")

[node name="SpawnPositionsContainer" type="Node2D" parent="."]

[node name="SpawnPosition01" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 60)

[node name="SpawnPosition02" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 180)

[node name="SpawnPosition03" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 300)

[node name="SpawnPosition04" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 420)

[node name="SpawnPosition05" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 540)

[node name="SpawnPosition06" type="Marker2D" parent="SpawnPositionsContainer"]
position = Vector2(1350, 660)

[node name="StraightSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
